add header logo and nav

--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
-<!DOC html>
+<!DOC html >
 <html>
 <head>
 <title>My Times</title>
+<link rel="stylesheet" type="text/css" href="Resources/css/styles.css">
+
 </head>
+<header>
+  <div class="header">
+  <p><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg"/> </p>
+  <h1>My Times</h1>
+    <nav>
+      <p><a href="#World">World</a></p>
+      <p><a href="U.S.">U.S.</a></p>
+      <p><a href="Tech">Tech</a></p>
+      <p><a href="Science">Science</a></p>
+    </nav>
+</div>
 <body>
 </body>
 </html>
