--- a/index.html
+++ b/index.html
@@ -2,20 +2,40 @@
 <html>
 <head>
 <title>My Times</title>
-<link rel="stylesheet" type="text/css" href="Resources/css/styles.css">
+<link rel="stylesheet" type="text/css" href="Resources/css/style.css">
 
 </head>
-<header>
-  <div class="header">
-  <p><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg"/> </p>
-  <h1>My Times</h1>
-    <nav>
-      <p><a href="#World">World</a></p>
-      <p><a href="U.S.">U.S.</a></p>
-      <p><a href="Tech">Tech</a></p>
-      <p><a href="Science">Science</a></p>
-    </nav>
-</div>
 <body>
-</body>
+<header>
+
+  <div class="logo">
+<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt=NYT Logo>
+  <span class="mytimes">My Times</span>
+</div>
+    <nav>
+
+      <span><a href="#World">World</a></space-between>
+      <span><a href="#U.S.">U.S.</a></span>
+      <span><a href="#Tech">Tech</a></span>
+      <span><a href="#Science">Science</a></span>
+    </nav>
+
+</header>
+<h2> Middle Section</h2>
+
+
+<footer>
+  <div class="info">
+    <span class= "title">My Times</span>
+    <nav>
+
+      <span><a href="#World">World</a></space-between>
+      <span><a href="#U.S.">U.S.</a></span>
+      <span><a href="#Tech">Tech</a></span>
+      <span><a href="#Science">Science</a></span>
+    </nav>
+  </div>
+  <div class="end"> &copy; 2017, My Times (A Division of Codecademy Bite)</div>
+</footer>
+  </body>
 </html>
