--- a/index.html
+++ b/index.html
@@ -14,28 +14,30 @@
 </div>
     <nav>
 
-      <span><a href="#World">World</a></space-between>
+      <span><a href="#World">World</a></span>
       <span><a href="#U.S.">U.S.</a></span>
       <span><a href="#Tech">Tech</a></span>
       <span><a href="#Science">Science</a></span>
     </nav>
 
 </header>
-<h2> Middle Section</h2>
+
+<body>
+<div class="main>"
+<div class="large">
+  <div class="image" title-"Dinner">
+    <span>Mother of Three Buys Tuna <br>Steak at Phish Concert,<br> Leaves "Feeling Funny."</span>
+  </div class="text">
+
+  <span>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</span>
+
+</div>
+<div class="medium">
+</div>
+<div class="small">
+  ,div>
+
+</body>
 
 
-<footer>
-  <div class="info">
-    <span class= "title">My Times</span>
-    <nav>
-
-      <span><a href="#World">World</a></space-between>
-      <span><a href="#U.S.">U.S.</a></span>
-      <span><a href="#Tech">Tech</a></span>
-      <span><a href="#Science">Science</a></span>
-    </nav>
-  </div>
-  <div class="end"> &copy; 2017, My Times (A Division of Codecademy Bite)</div>
-</footer>
-  </body>
 </html>
